<resources>
    <string name="app_name">magazineOfCultAuto</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_notifications">Notifications</string>
    <string name="createlogin">Создайте логин</string>
    <string name="mail">Введите почту</string>
    <string name="password">Создайте пароль</string>
    <string name="ispassword">Подтвердите пароль</string>
    <string name="buttonRegistration">Зарегистрироваться</string>
    <string name="enterlogin">Введите логин</string>
    <string name="enterpassword">Введите пароль</string>
    <string name="item_image">Изображение</string>
    <string name="buttonLogin">Войти</string>
    <string name="notRegistrationYet">Еще не зарегистрировались? Нажмите для регистрации</string>

    <string name="title_catalog">Каталог</string>

    <string name="title_profile">Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_homeact">homeact</string>
    <string name="title_activity_homeactivity">homeactivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>