<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityRegistration">
    <EditText
        android:id="@+id/createlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="20dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/createlogin"
        android:inputType="text"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="text"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/createlogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/createlogin"
        app:layout_constraintTop_toTopOf="@+id/createlogin"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/mail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mail"
        app:layout_constraintTop_toTopOf="@+id/mail"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ispassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/ispassword"
        android:inputType="text"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonRegistration"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/deepBlue"
        android:text="@string/buttonRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ispassword"
        />

    <TextView
        android:id="@+id/textTomenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="114dp"
        android:text="Вернуться в главное меню"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistration" />

</androidx.constraintlayout.widget.ConstraintLayout>