<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <EditText
        android:id="@+id/enterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:minHeight="48dp"
        android:hint="@string/enterlogin"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/enterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:minHeight="48dp"
        android:hint="@string/enterpassword"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/enterLogin"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/enterLogin"
        app:layout_constraintTop_toTopOf="@+id/enterLogin" />

    <Button
        android:id="@+id/buttonlogin"
        style="@style/Theme.MaterialComponents.DayNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="28dp"
        android:backgroundTint="@color/deepBlue"
        android:text="@string/buttonLogin"
        app:layout_constraintEnd_toEndOf="@+id/enterPassword"
        app:layout_constraintStart_toStartOf="@+id/enterPassword"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword"

        />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="StartActivityRegistration"
        android:text="@string/notRegistrationYet"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonlogin" />

    <TextView
        android:id="@+id/textToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="82dp"
        android:text="Вернуться в главное меню"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistration" />

</androidx.constraintlayout.widget.ConstraintLayout>